Fix overlay popping from the side upon visibility toggle

--- a/overlay.css
+++ b/overlay.css
@@ -1,5 +1,6 @@
 #streamer_overlay {
 	display: inline-flex;
+	visibility: visible;
 	position: relative;
 	height: 55px;
 	margin: 8px auto;
